--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -5,9 +5,15 @@ jobs:
   build:
     name: Build and Test
     runs-on: ubuntu-latest
+    env:
+      VERSION: 0.0.$GITHUB_RUN_NUMBER-preview
     steps:
       - uses: actions/checkout@master
 
-      - run: docker build -t wled/test:latest . --target test
+      - run: docker build -t wled/test:latest --build-arg VERSION=$VERSION . --target test
       - run: docker run wled/test:latest
-      
+
+      - run: docker build -t wled/push:latest --build-arg VERSION=$VERSION . --target push
+      - run: docker run --env NUGET_API_KEY=$NUGET_API_KEY wled/push:latest
+        env:
+          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
