--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set VERSION env
-        run: echo ::set-env VERSION=0.0.${{ env.GITHUB_RUN_NUMBER }}-preview
+        run: echo ::set-env VERSION=0.0.$GITHUB_RUN_NUMBER-preview
         
       - uses: actions/checkout@master
 
