--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -5,6 +5,8 @@ jobs:
   build:
     name: Build and Test
     runs-on: ubuntu-latest
+    env:
+        VERSION:
     steps:
       - name: Set VERSION env
         run: echo ::set-env VERSION=0.0.$GITHUB_RUN_NUMBER-preview
