--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -6,7 +6,7 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-latest
     env:
-        VERSION:
+      VERSION:
     steps:
       - name: Set VERSION env
         run: echo ::set-env VERSION=0.0.$GITHUB_RUN_NUMBER-preview
@@ -14,9 +14,13 @@ jobs:
       - uses: actions/checkout@master
 
       - run: docker build -t wled/test:latest --build-arg VERSION=$VERSION . --target test
+        env:
+          VERSION: ${{ env.VERSION }}
       - run: docker run wled/test:latest
 
       - run: docker build -t wled/push:latest --build-arg VERSION=$VERSION . --target push
+        env:
+          VERSION: ${{ env.VERSION }}
       - run: docker run --env NUGET_API_KEY=$NUGET_API_KEY wled/push:latest
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
