--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -15,6 +15,8 @@ jobs:
       - run: docker run wled/test:latest
 
       - run: docker build -t wled/push:latest --build-arg VERSION . --target push
-      - run: docker run --env NUGET_API_KEY=$NUGET_API_KEY wled/push:latest
+        env:
+          VERSION: ${{ env.VERSION }}
+      - run: docker run --env NUGET_API_KEY=${{ env.NUGET_API_KEY }} wled/push:latest
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
