--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -9,6 +9,15 @@ jobs:
       - name: Set VERSION env
         run: echo ::set-env VERSION=0.0.$GITHUB_RUN_NUMBER-preview
         
+      - name: Echo 1 Version
+        run: echo $VERSION
+      - name: Echo 2 Version
+        run: echo ${{ env.VERSION }}
+      - name: Echo 3 Version
+        run: echo $VERSION
+        env:
+          VERSION: ${{ env.VERSION }}
+
       - uses: actions/checkout@master
 
       - run: docker build -t wled/test:latest --build-arg VERSION . --target test
