--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -15,7 +15,7 @@ jobs:
         run: echo ${{ env.VERSION }}
       - name: Echo 3 Version
         run: echo $VERSION
-        with:
+        env:
           VERSION: ${{ env.VERSION }}
 
       - uses: actions/checkout@master
