--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -6,6 +6,7 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-latest
     steps:
+      - run: echo ${{ github.ref }}
       - name: Set VERSION env
         run: echo ::set-env name=VERSION::0.0.${{ github.run_number }}-preview
 
@@ -16,5 +17,6 @@ jobs:
 
       - run: docker build -t wled/push:latest --build-arg VERSION . --target push
       - run: docker run wled/push:latest --api-key ${{ env.NUGET_API_KEY }}
+        if: 
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
