--- a/test/Kevsoft.WLED.Tests/Kevsoft.WLED.Tests.csproj
+++ b/test/Kevsoft.WLED.Tests/Kevsoft.WLED.Tests.csproj
@@ -7,10 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.11.0" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Kevsoft.WLED\Kevsoft.WLED.csproj" />
   </ItemGroup>
 
 </Project>
