--- a/test/Kevsoft.WLED.Tests/Kevsoft.WLED.Tests.csproj
+++ b/test/Kevsoft.WLED.Tests/Kevsoft.WLED.Tests.csproj
@@ -19,4 +19,9 @@
     <ProjectReference Include="..\..\src\Kevsoft.WLED\Kevsoft.WLED.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Using Include="AutoFixture" />
+    <Using Include="FluentAssertions" />
+    <Using Include="Xunit" />
+  </ItemGroup>
 </Project>
